fix uneven spacing on search fields on tablet

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -79,7 +79,11 @@
 }
 
 .inlineSpacing {
-  justify-content: space-evenly;
+  justify-content: space-between;
+
+  @media (min-width: b.$breakpoint-desktop) {
+    justify-content: space-evenly;
+  }
 }
 
 .swapBtn {
